fixed row gap with negative margin, fixed overflow on card with long overview

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ header {
   border: 1px solid black;
   box-shadow: 0px 0px 10px white;
   position: fixed;
+  z-index: 2;
   background-color: white;
 }
 
@@ -77,10 +78,12 @@ main {
   display: flex;
   justify-content: left;
   gap: 1.5rem;
+  flex-wrap: wrap;
+  margin-right: -1.5rem;
 }
 
 .card {
-  width: calc(100% / 4);
+  width: calc(100% / 4 - 1.5rem);
   box-shadow: 0px 0px 10px white;
   position: relative;
   cursor: pointer;
@@ -108,6 +111,7 @@ main {
   left: 0;
   z-index: 1;
   color: white;
+  overflow-y: auto;
 }
 
 .card:hover {
